--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </div>
             <ul>
                 <li>Home</li>
-                <li>About Us</li>
-                <li>Contact Us</li>
+                <li>About </li>
+                <li>Contact </li>
                 <li>Services</li>
             </ul>
             <!-- <a href=""><button class="btn1">Follow...</button></a> -->
